FLT-misc-39b0.2: Support for batch operations in single commit for gathering resources

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,5 +1,182 @@
 Stay out of my shed
 
+НОВЫЙ ГОД
+Обязательно
+  Новогодний бэкграунд
+  Новогодние смайлы
+  Новогодняя сказка
+  Увеличенные рейты по этапам
+  Призы самым стойким
+Опционально
+  Ивент "ЧЛ" (?)
+  Новый эвент в экспе - какой-нибудь сборный артефакт, который собирается по кускам. Типа, там "Ёлочка" с игрушками итд. Собирается всем сервером. Механику пока не продумал
+  Скидки на ММ
+  Скидки на Прем
+
+
+[22:26:30] Project "SuperNova.WS": [22:19:35] Project "SuperNova.WS": [22:18:33] Project "SuperNova.WS": Еще есть мнение - уменьшить скорость полета флотов на НГ
+[22:18:46] Project "SuperNova.WS": Эдак на 30-31-1-2
+[22:22:21] SuperNova - artyom Артеи: Чего чего??? Это как?
+[22:22:48] Project "SuperNova.WS": Что бы пьяных не грабили
+[22:23:07] SuperNova - artyom Артеи: На сколько уменьшить?
+[22:25:15] Project "SuperNova.WS": Да хез
+[22:25:23] Project "SuperNova.WS": Раза в два точно. А по уму - в 4
+[22:25:39] Project "SuperNova.WS": Или вообще мораторий на атаки
+[22:25:49] SuperNova - artyom Артеи: Слоупок )
+[22:25:50] Project "SuperNova.WS": Что бы разжырели на повышенных рейтах
+[22:26:02] SuperNova - artyom Артеи: Так введи мараторий а скорость не трогай
+[22:26:09] Project "SuperNova.WS": А вот 3-го числа, ровно в 00:00 начнется заруба...
+
+Ивент "Черная Луна"
+  - вбрасывается несколько планет с лунами от нескольких пользователй разных уровней для разных интервалов
+  - каждая луна генерит ТМ. Каждая луна - своё количество
+  - пока на планете стоит чужой флот - ТМ капает на этого игрока
+  - если флотов несколько - ТМ распределяется между всеми игроками пропорционально цене флота
+  - обсчет ЧЛ происходит каждые 10 минут
+  - виртуальный игрок имеет две планеты. Первую - столицу, вторую - с ЧЛ. Столица обязательно появляется в населенном секторе (активный игрок), а ЧЛ - в ненаселенном (i-шки или пустые?)
+    $user_activity = floor(($time_now - $uni_galaxyRowUser['onlinetime'])/(60*60*24));
+     'USER_ACTIVITY' => $user_activity,
+     'USER_ATTACKABLE' => $user_activity >= 7,
+     'USER_INACTIVE' => $user_activity >= 28,
+  - посмотреть - можно ли просто поставить пользователю статистику и она будет сохранятся между пересчетами, или надо хитровыебаться
+  - (???) частота тиков, максимальная длительность Удержания и количество флотов зависит от брэкета, для которого стоит ЧЛ
+  - несколько лун для маленьких брэкетов
+
+
+select u.id, u.onlinetime, UNIX_TIMESTAMP(NOW()),
+IF((UNIX_TIMESTAMP(NOW()) - u.onlinetime)/24/60/60 < 7, 0,
+IF((UNIX_TIMESTAMP(NOW()) - u.onlinetime)/24/60/60 < 28, 1, 2
+)
+
+)
+from lh_planets as p
+join lh_users as u on u.id = p.id_owner
+
+
+
+order by u.id
+limit 1000;
+
+
+
+Эксперимент по краудфандингу: ивент "Черная Луна"
+
+В чате на Альфе предложили ивент. Как предложили, конечно, слабореализуемый бред, но, как ни странно, идея имеет здравое зерно. Оригинал звучал так:
+[quote]"[07.12.2014 23:22:58]  Spirt> я тут подсмотрел идейку, в общем ивент. Его суть: Администрация создаёт 1 плантку которую можно захватывать, с неё можно добывать ТМ, и сообщает кординаты этой планетки всем присутствующим. Альянсы воюют за эту планету)"[/quote]
+Очевидно, что это - слабореализуемая утопия. Конечно, в планах есть и захват планет, и Бои Альянсов, но каждый из этих компонентов сам по себе требует немало времени на реализацию. А затем это всё надо скомпоновать и сделать ивент сам по себе - что тоже потребует некислых модификаций кода. Например - добавление структуры, которая добывает ТМ. Напомню, что сейчас такие структуры в движке в принципе не предусмотрены, т.е. их надо писать с нуля  В общем - работы на многие десятки часов
+
+Но в том же чате в очередной раз предложили "скинутся"... Что ж, я давно вынашиваю идею краудфандинга фишек. Ибо хочется больше времени уделять движку, но и кушать что-то надо. Давайте проведем эксперимент. Как знать - может соберется и с миру Горлуму на пиво? И, возможно, это станет хорошей традицией - подкреплять свои "хотелки" баблом, а не просто кидая их в чат
+
+Объявляю краудфандинг на фишку "ивент 'Черная Луна'". Краудфандинг - это когда много людей жертвует на проект некую сумму, а в результате общий итог (в идеале) дает разработчику возможность воплотить фишку в коде и запустить её в игру
+
+Немного по сути ивента. Он состоит в том, что во Вселенную вбрасывается планеты, которые имеют особенную луну - Чёрную Луну (ЧЛ). При установке флота в Удержание на ЧЛ, игроку каждый тик будет капать ТМ.
+
+И немного технических деталей:
+- в каждом брэкете (диапазоны разбиения игроков в зависимости от их баллов развития) будет собственная ЧЛ. Т.е. игроки всех уровней смогут поучаствовать в ивенте. Кроме, возможно, топов - там слишком узкие брэкеты, так что на каждого топа может прийтись по ЧЛ. Что лишает интригу смысла
+- установка флота в Удержание на ЧЛ приносит владельцу флота ТМ каждый тик
+- если в Удержании стоит 1 флот любого размера - всю ТМ получает владелец флота
+- если в удержании стоит несколько флотов - ТМ распределяется по владельцам пропорционально полным стоимостям флотов (т.е. включая стоимость в дейтерии)
+- ЧЛ можно уничтожить
+
+Я уже составил на ТЗ на этот ивент, посчитал вчерне математику и готов его реализовать. Теперь дело за игроками. Как это принято в краудфандинге, установим цели:[list]
+[*] <100 USD в эквиваленте - эксперимент будет признан провальным. Все "хотельщики", чьи хотелки не подкреплены конкретной суммой будут отправляться в пешее эротическое, вместе со своими хотелками. Если не наберется даже 100 USD, то всем, кто проспонсирует эту фишку, в компенсацию за пассивность остальных игроков будет начислен эквивалент суммы в ММ на любом выбранном ими сервере supernova.ws (это верно ТОЛЬКО ЕСЛИ не наберется даже 100 USD в эквиваленте);
+[*] >=100 USD в эквиваленте - результат эксперимента - удовлетворительный. Я сделаю эту фишку в базовом варианте и она будет выпущена в рамках новогодней акции к Новому Году-2015;
+[*] >=200 USD в эквиваленте - результат эксперимента - хороший. Примерно в такую сумму я оцениваю базовый функционал этого ивента для СН[list]
+    [*] Каждый пожертвованный доллар после 200 USD будет увеличивать добычу с ЧЛ во время новогодней акции на 1%. Т.е. 250 USD - +50% от запланированной скорости добычи;[/list]
+[*] >=300 USD в эквиваленте - результат эксперимента - очень хороший[list]
+    [*] Каждый пожертвованный доллар после 200 USD будет увеличивать добычу с ЧЛ во время новогодней акции на 2%. Т.е. 350 USD - +300% от запланированной скорости добычи;
+    [*] Все, кто спонсировал фишку, получат 5% в виде ТМ на любом игровом сервере supernova.ws (это и подобные предложения распространяются и на игроков из приложений под Андроид, Windows и Windows Phone);[/list]
+[*] >=400 USD в эквиваленте - результат эксперимента - отличный![list]
+    [*] После НГ в игру на постоянно основе будет добавлена дорогая лунная спецпостройка, которая будет фармить ТМ на Луне (будут ограничения и допусловия на работу этой постройки!);
+    [*] Каждый пожертвованный доллар после 200 USD будет увеличивать добычу с ЧЛ во время новогодней акции на 4%. Т.е. 450 USD - +1000% от запланированной скорости добычи
+    [*] Все, кто спонсировал фишку, получат 10% в виде ТМ на любом игровом сервере supernova.ws;[/list]
+[*] >=500 USD в эквиваленте - результат эксперимента - великолепный!! Примерно столько стоил бы базовый функционал (без зданий, свистелок и перделок), если бы пришлось заказывать его "на стороне". Это даст возможность мне написать дополнительный интерфейс и сделать такие ивенты РЕГУЛЯРНЫМИ![list]
+    [*] Ивент станет РЕГУЛЯРНЫМ!
+    [*] В Новый Год гарантированно будет скидка на покупку ММ
+    [*] После НГ в игру на постоянно основе будет добавлена дорогая лунная спецпостройка, которая будет фармить ТМ на Луне (часть ограничений будет снято, добыча будет увеличена)
+    [*] Каждый пожертвованный доллар после 200 USD будет увеличивать добычу с ЧЛ во время новогодней акции на 10%. Т.е. 550 USD - +3500% от запланированной скорости добычи
+    [*] Все, кто спонсировал фишку, получат 25% в виде ТМ на любом игровом сервере supernova.ws;[/list][/list]
+
+
+Естественно, предусмотрены индивидуальные бонусы! Они начисляются тем, чья сумма пожертвования достигла указанной величины в дополнение к тем бонусам, которые начислены при достижении общей цели:[list]
+[*] 50 USD - Премиум-аккаунт +3 на 3 месяца на ЛЮБОМ из серверов Альфа, Бета, Гамма, Дельта. Игровая медаль "Бронзовый спонсор". +10% к следующей покупке ММ на любом сервере
+[*] 100 USD - Премиум-аккаунт +3 на 6 месяцев на ЛЮБОМ из серверов Альфа, Бета, Гамма, Дельта. Игровая медаль "Серебряный спонсор". +20% к следующей покупке ММ на любом сервере
+[*] 200 USD - Премиум-аккаунт +4 на 3 месяца на ЛЮБОМ из серверов Альфа, Бета, Гамма, Дельта. Игровая медаль "Золотой спонсор". +30% к следующей покупке ММ на любом сервере
+[*] 300 USD - Премиум-аккаунт +4 на 1 год на ЛЮБОМ из серверов Альфа, Бета, Гамма, Дельта. Игровая медаль "Платиновый спонсор". +50% к следующей покупке ММ на любом сервере
+[*] 500 USD - Премиум-аккаунт +5 на 3 месяца, максимальный уровень всех Наемников на 1 год на ЛЮБОМ из серверов Альфа, Бета, Гамма, Дельта. Игровая медаль "Алмазный спонсор". +75% ММ к следующей покупке на любом сервере
+[*] 1000 USD - Премиум-аккаунт +5 на 6 месяцев, максимальный уровень всех Наемников +1 на 1 год на ЛЮБОМ из серверов Альфа, Бета, Гамма, Дельта. Игровая медаль "Бриллиантовый спонсор". +100% ММ к следующей покупке на любом сервере
+[*] 2000 USD - Премиум-аккаунт +5 на 1 год, максимальный уровень всех Наемников +2 на 1 год на ЛЮБОМ из серверов Альфа, Бета, Гамма, Дельта. Игровая медаль "Тёмный спонсор". Выделение имени игрока в чате. +150% ММ к следующей покупке на любом сервере
+[*] 5000 USD - Премиум-аккаунт +6 на 1 год, максимальный уровень всех Наемников +5 на 1 год на ЛЮБОМ из серверов Альфа, Бета, Гамма, Дельта. Игровая медаль "Метаспонсор". Выделение имени игрока в чате. +300% ММ к следующей покупке на любом сервере[/list]
+
+Если платежи разнесены во времени - то награды всё равно кумулятивны. Т.е. если кто-то пожертвовал 50 WMZ и получил +3 премиум на 3 месяца, а затем пожертвовал еще 50 WMZ - его премиум будет проапгрейжен с 3 месяцев до 6 месяцев. Ну и никто не мешает проапгрейдить свой прем на любой другой уровень
+
+Подчеркиваю: данное предложение - это не акция. Это - сбор средств на новую фишку. Основная цель - собрать деньги на фишку. Бонусы - это чисто бонусы. Тупо купить ММ за ту же сумму будет дешевле. Но участие в сборе средств даст мне понимание, насколько игроки ДЕЙСТВИТЕЛЬНО заинтересованы в игре и насколько имеет смысл обращать на их хотелки
+
+Первоначальный контрольный срок - среда, 10 декабря 2015 года. Там станет понятно - стоит ли продолжать краудфандинг
+
+Для получения реквизитов для платежа со мной можно связаться по контактам, указанным тут: http://forum.supernova.ws/viewtopic.php?f=3&t=2474
+
+
+http://habrahabr.ru/post/244815/
+  Оптимизация CSS - комменты
+  http://perfectionkills.com/profiling-css-for-fun-and-profit-optimization-notes/
+http://perfectionkills.com/profiling-css-for-fun-and-profit-optimization-notes/
+http://frontender.info/css-performance-revisited-selectors-bloat-expensive-styles/
+
+
+
+
+Мой ник Сингулярность на серверах:
+http://alpha.supernova.ws/ (он же http://ogame.supernova.ws/ , на том же сервере играют все игроки через приложения Андроид, Windows 8 и Windows Phone)
+http://delta.supernova.ws/
+
+Мой ник Gorlum на серверах:
+http://gamma.supernova.ws/ (он же http://supernova.supernova.ws/ )
+http://beta.supernova.ws/
+
+
+Рандомизатор онлайна
+  update lh_users set onlinetime = UNIX_TIMESTAMP() - FLOOR(1 + RAND() * (60 - 1)) * 24*60*60 ;
+
+
+
+Новое здание - Монолит (Одиссея-2001)
+  - строится за ресы и ТМ (или только за ресы, но огромное количество?)
+  - генерит ТМ
+  - работает, только если на планете нет других построек и обороны, а на орбите - нет флотов
+
+
+Новое здание - "Голограмный проектор" за ТМ. Показывает в шпионаже увеличенное количество юнитов на планете. Режимы работы:
+  - Отключить
+  - Уменьшение уровней всех зданий
+  - Уменьшение количество боевых юнитов (раздельно защиты и обороны?)
+  - Увеличение количества боевых юнитов (раздельно защиты и обороны?)
+  - Спрятать полностью одно здание - тогда видно проектор. В случае если это шахты - прячет и ракеты. Можно спрятать здания на сумму своих уровней, на себя - прячет свой остаток
+  - Работать в + к ЭУИ планеты
+  - От уровня зависит доступное изменение. Каждый уровень - +10% (5%?)
+  - Прячет ли себя в режимах работы?
+
+
+Телепортация, использование Крюка и БАК, использование Монолита, использование Ворот - увеличивает шанс превращения солнца системы в СверхНовую. Как в исходнике, так и в пункте Назначения
+Эвент СверхНовая
+  - есть время убраться, телепортироваться и продаться
+  - при телепорта заново кидается шанс Сверхновой
+  - Телепорт - +1%, Ворота - +0.1%, Монолит - +0.001% (?) за левел каждый тик. Тик - каждые 60 минут
+  - при взрыве СН сносится % зданий, флота и обороны, равный проценту шанса взрыва с округлением вверх
+
+
+Планировщик бюджета ТМ
+
+Китайсы
+  http://habrahabr.ru/post/237725/
+  http://habrahabr.ru/post/245027/
+
+  Я использовал вот этот сервис tethras.com. Переводил приложение для windows phone, у меня было около 600-100 слов, кажется. Примерно вышло около $50 за один язык. Кстати там очень удобно сразу загружаешь ресурсный фаил и получаешь так же ресурсный фаил, но уже в другом языке.
+
+  если заказ разовый и объём небольшой, то можно воспользоваться сервисами типа Gengo или Alconost Nitro. По обеим ссылкам есть расценки. Если же проект подразумевает постоянные обновления и развитие, то лучше найти переводческое агентство (лучше в самом Китае). Расценки агентств (в паре английский-китайский упрощённый/традиционный) от 0,04 до 0,20 долларов за слово исходного языка в зависимости многих параметров (формат исходного текста, тематика, необходимость вычитки, тестирования, вид тестирования, ведение глоссариев, консультаций по интернационализации и т.д.)
+
+Альянсы
+  Увеличивать/Уменьшать бонус игроку, пропорционально разнице со средним уровнем алла - надо ли?
 
 Duplicate entry '3267-1-60088-1500' for key 'I_unit_player_location_snid'<br />/* tID 155<br />classSupernova::db_upd_record_by_id() - 'includes/db/db_queries_unit.php' Line 50<br />db_unit_set_by_id() - 'modules/unit_captain/unit_captain.php' Line 159<br />(unit_captain)unit_captain->unit_captain_restore_fleet_to_planet() - '' Line <br />call_user_func_array() - 'includes/general.php' Line 32<br />sn_function_call() - 'includes/includes/flt_flying_fleet_handler2.php' Line 22<br />RestoreFleetToPlanet() - 'includes/includes/flt_mission_relocate.php' Line 35<br />flt_mission_relocate() - 'includes/includes/flt_flying_fleet_handler2.php' Line 371<br />flt_flying_fleet_handler() - 'includes/init.php' Line 360<br />require_once() - 'common.php' Line 10<br />require_once() - 'index.php' Line 5<br /> */ UPDATE beta_unit SET `unit_location_type` = 1, `unit_location_id` = 60088 WHERE `unit_id` = 94837<br />
 
@@ -118,6 +295,80 @@ Duplicate entry '3267-1-60088-1500' for key 'I_unit_player_location_snid'<br />/
 
 
 
+CSS и JS - релоадер:
+  touch update.php каждый раз
+  Вытягивать время изменения апдейта
+  Добавлять это время ко всем JS и CSS
+  Или просто копировать JS-CSS в каталог cache - но тут нужен центральный репозиторий кэшей и права на запись
+
+  Апгрейд офицеров
+  Карго-мастер - убрать или повысить ёмкость трюмов. Проверить нужность по статистике использования
+  Переделать с повышением цены на трюмы+склады
+  Академик - добавить +1 слот/левел. Проверить нужность по статистике использования
+
+
+
+Артефакты в экспе - "Премиум" на 1+ дней. Можно хранить, можно использовать для апгрейда
+
+Платежи - переписать централь а-ля иксолла с дефолтным сервером
+Проверить работу robots.txt
+
+Center vertically
+
+xsolla - передавать описание платежа
+
+Попереименовывать константы во всех платёжных модулях - привести их к одному стандарту
+
+скин/темплейт console
+
+Переделать платный выбор расы в сброс расы
+
+Статистика
+  Проверить, почему при обновлении после удаления данных извне пользователям неправильно назначаются места
+
+Премиум - субсекундная точность. 1 - 0.5 сек, 2 - 0.25 сек, 3 - 0.125 сек итд
+  Можно практически всё. Есть в планах - называется "субсекундная точность". Но будет в игре как спец-фишка за ТМ или для высоких уровней премиума - пока не решил, поскольку еще даже не думал над реализацией, поскольку явно неприоритетная вещь, нужная в основном топ- и саб-топам, у которых всё и так более чем кучеряво. Кроме того в сочетании с наниткой на луне - очевидный геймбрейкер: можно моментально наностроителями выкачать нанитку, после чего за считанные часы наклепать неубиваемую оборону. А затем просто свозить ресы на луну и свистеть в три дырочки
+
+[*] Покупка отдельно возможности настраивать меню за ТМ (5к на 1 мес) и навсегда (20кММ)
+[*] Вынести весь код, все стили, весь темплейт в menu_customize
+Модуль иконок андроида - сделать их системными
+Проверить, почему изменения в менюшке отрабатываются только на второй раз
+Прикрепленное меню с галочкой "Показывать открепленное меню поверх" так же показывается поверх
+
+Меню
+  Сделать глаз больше на мобильных устройствах
+  И вообще - делать шрифт больше (?)
+
+Квесты - в меню добавить выполненных/всего
+
+Дальность флота расчитывать по отдельному кораблю - а не по пакам. Что бы не получилось, что пак ЛИ может пролететь 10 галактик, потому что с ними летит пак МТ
+
+Новое лекарство Выапрол
+
+На странице постройки в таблице изменений левела писать +левел +добавки
+  Отключать кнопку "Свезти ресурсы", если у игрока только одна планета без луны
+  Переделать дропдаун смены ядра
+  Покинуть колонию - написать, что это пароль от игры
+
+
+#chat_message_smiles2 div {
+  width: 54px;
+  height: 54px;
+
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+#chat_message_smiles2 div img {
+/*  display: inline-block;*/
+  position: relative;
+  top: 50%;
+  -ms-transform: translateY(-51%);
+  -webkit-transform: translateY(-51%);
+  -o-transform: translateY(-51%);
+  -moz-transform: translateY(-51%);
+  transform: translateY(-51%);
+}
 
 
 
@@ -482,7 +733,7 @@ Duplicate entry '3267-1-60088-1500' for key 'I_unit_player_location_snid'<br />/
 ======================
 
 
-Текущий билд #39a16.5#
+Текущий билд #39b0.2#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять flt_lastUpdate
