SYS-misc-39b0.6: Black Moon event support

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -120,6 +120,28 @@ limit 1000;
 Для получения реквизитов для платежа со мной можно связаться по контактам, указанным тут: http://forum.supernova.ws/viewtopic.php?f=3&t=2474
 
 
+
+Итак, на СуперНове начали отмечать Новогодние праздники. Первые залпы феерверка акций и ивентов игроки уже почувствовали на себе:[list]
+[*] Новогодний фон
+[*] Новогодний набор смайликов
+[*] И самое интересное - увеличение рейтов добычи ресурсов в 1,5 раза![/list]
+
+Но это - только начало! Что бы игроки ориентировались в грядущем разгуле, публикуется очень кратенькая выжимка запланированных на НГ мероприятий:[list]
+[*] 24 декабря 2014 года - 18 января 2015 года 23:59:59: Новогодние Праздники на СуперНове!
+[*] 24 декабря 2014 года: скорость добычы увеличивается в 1,5 раза. [color=#008000]УЖЕ В СУПЕРНОВЕ![/color]
+[*] 24 декабря 2014 года - 1 января 2015 года 23:59:59: МЕГАскидки на премиум-аккаунты ЗА ТМ! (см. ниже)
+[*] 25 декабря 2014 года: скорости постройки и исследований увеличиваются в 1,5 раза
+[*] ?? декабря 2014 года - 31 декабря 2014 года: (тут ЕЩЕ МОЖЕТ быть ивент, если до 28 декабря наберется 500 эквивалентов на [url=http://forum.supernova.ws/viewtopic.php?f=4&t=2981&start=10#p35948]ЧЛ[/url]
+[*] 31 декабря 2014 года - 1 января 2015 года 23:59:59: [url=http://forum.supernova.ws/viewtopic.php?f=4&t=2987]мораторий[/url] на агрессивные миссии
+[*] Новогодняя Ночь - отмечаем Новый Год в чате СН! На время моратория (включая Новогоднюю Ночь) будет снято ограничение на неигровые разговоры в чате. Однако помним - нарушать Правила по-прежнему нельзя: никаких обсуждений политики, религии, личных данных игроков и прочего
+[*] 2 января 2015 года 00:00:00 - в честь 55-летия первого полёта Человечества к Луне - ивент "Восхождение [url=http://forum.supernova.ws/viewtopic.php?f=4&t=2981]Чёрной Луны[/url]". Окончание ивента - [color=#800000]6 января 2015 года 23:59:59[/color]
+[*] ?? декабря 2014 года - 31 декабря 2014 года: (тут ЕЩЕ МОЖЕТ быть ивент, если до 28 декабря наберется 500 эквивалентов на [url=http://forum.supernova.ws/viewtopic.php?f=4&t=2981&start=10#p35948]ЧЛ[/url]
+[*] ?? января 2015 года: (тут ЕЩЕ МОЖЕТ появится [url=http://forum.supernova.ws/viewtopic.php?f=4&t=2981&start=10#p35948]спецпостройка для лун[/url], которая будет фармить ТМ, если наберется 500 эквивалентов на ивент ЧЛ)
+[*] 18 января 2015 года 23:59:59: Окончание Новогодних Праздников. Заканчиваются все ивенты, акции. Рейты возвращаются к изначальным уровням
+[/list]
+
+
+
 http://habrahabr.ru/post/244815/
   Оптимизация CSS - комменты
   http://perfectionkills.com/profiling-css-for-fun-and-profit-optimization-notes/
@@ -734,7 +756,7 @@ xsolla - передавать описание платежа
 ======================
 
 
-Текущий билд #39b0.5#
+Текущий билд #39b0.6#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять flt_lastUpdate
