MISC-feat-39b0.9: Support for extra events in expedition

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -140,7 +140,15 @@ limit 1000;
 [*] 18 января 2015 года 23:59:59: Окончание Новогодних Праздников. Заканчиваются все ивенты, акции. Рейты возвращаются к изначальным уровням
 [/list]
 
+В распиании событий указаны скидки на Премиум-аккаунт! И они УЖЕ В ИГРЕ! Скидки - на любой вкус и любое количество ТМ! Да-да, вы не ослышались! В Новогодние Праздники скидки на Премиум-аккаунт даются просто за ТМ! Скидки от приятных 2% до огромных 60%!
+Уже на +3 премиуме за до-акционную цену 60 дней можно теперь взять тот же самый уровень премиума на 90 дней - месяц премиума в подарок!
+Дальше - больше! 60 дневный Премиум +4 сейчас лишь чуточку дороже, чем раньше стоил 30 дневный аккаунт того же уровня! Двухкратная длительность - по практически той же цене!
+Хочется ЕЩЕ больше? Есть их у меня! Месячный прем +5 - дешевле, чем доакционный двухнедельный прем! А +6 уровень отдается практически даром - 90 дней премиума стоят дешевле, чем 30 дней до Новогодних Праздников! Два месяца мощнейшего премиума - в подарок!
+Впрочем, все детали вы можете посмотреть сами - как писалось выше, скидки УЖЕ В ИГРЕ! Лишь выберите пункт "Премиум" в меню слева - и сами выбирайте себе скидку!
 
+
+
+Экспедиции - левел должен влиять на что-то. На добычу?
 
 http://habrahabr.ru/post/244815/
   Оптимизация CSS - комменты
@@ -756,7 +764,7 @@ xsolla - передавать описание платежа
 ======================
 
 
-Текущий билд #39b0.6#
+Текущий билд #39b0.9#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять flt_lastUpdate
