FLT-feat-39b1.0: Rewrote fleet lock system

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -764,10 +764,10 @@ xsolla - передавать описание платежа
 ======================
 
 
-Текущий билд #39b0.14#
+Текущий билд #39b1.0#
 ~~~~~~~~~~~~~~~~~~~~~
 
-// НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять flt_lastUpdate
+// НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять fleet_update_last
 
 Последовательность блокировок user-planet-unit-que-fleet-остальное
 
