SEC-feat-39b2.0: New security subsystem

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -626,6 +626,9 @@ xsolla - передавать описание платежа
 
 
 
+КК
+  [*] Новая характеристика - теплоёмкость. Щиты увеличивают теплоёмкость. Нужно для баланса энергооружия и объема, а так же для использования щитов, а не брони
+
 
 РЕЛИЗ 39
 ========
@@ -764,7 +767,7 @@ xsolla - передавать описание платежа
 ======================
 
 
-Текущий билд #39b1.0#
+Текущий билд #39b2.0#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять fleet_update_last
