UNI-feat-39b5.3: Show popup delay

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -324,6 +324,37 @@ Duplicate entry '3267-1-60088-1500' for key 'I_unit_player_location_snid'<br />/
   admin_protection          - нужно очень редко
 
 
+Генерация кристаллов
+
+lexa
+Первые клеточные автоматы были как раз моделями роста кристаллов (Станислав Улам). Самое известное правило такого автомата - "один из восьми". Ну то есть буквально - новая клетка возникает там, где ровно один живой сосед, в остальных случаях состояние не меняется. Из одной точки вырастает вот такая квадратная снежинка:
+http://fuga.ru/shelley/pautina/cell7.gif
+Я экспериментировал с чередованием окрестностей, чтобы уйти от квадратности:
+http://fuga.ru/shelley/pautina/cell1.gif
+Но более натуральные кристаллы -дендриты можно получить иначе: моделируется случайное блуждание с налипанием, тоже на клеточном автомате - но тут есть элемент случайности, потому и картинка более реалистичная:
+http://fuga.ru/shelley/pautina/cell13.gif
+Вообще там среди иллюстраций Паутины много таких явлений, смоделированных на клеточных автоматах:
+http://fuga.ru/shelley/pautina/cell18.gif
+Лучшая книжка на эту тему на русском называлась "Машины клеточных автоматов" Тоффоли и Марголуса. Там и все эти правила есть. Впрочем, не исключено, что за последние 20 лет могли еще издать поинтересней. Стивен Вольфрам (который поисковик ВольфрамАльфа) много занимался этой темой тоже.
+
+stealthy_shadow
+Я уже дошел до гексагональных снежинок со случайным "налипанием" и фронтальных клеточных автоматов, но результат по-прежнему неудовлетворительный. Хочется получить не просто красивый стационарный кристалл, но и красивую картинку процесса в динамике. Да не монохромную, а с ростом "прожилок", псевдо-трехмерной фактуры и прочих красивостей. Но здесь уже, похоже, нужно конкретное ноу-хау со вполне определенными формулами и сидами
+
+lexa
+Ну в общем да, я не специализировался на кристаллах, так что у меня примеры простенькие.
+Хотя трехмерные картинки можно получить на трехмерном клеточном автомате точно так же, как на плоском: моделируется случайное блуждение с сохранением числа частиц (то есть окрестность каждой клетки просто вращается в случайную сторону) - ну и дальше налипание.
+Можно забавно менять законы налипания. В картинке дендрита, что приведён выше, налипает любая частица, которая оказалась рядом с "замороженной". Но можно задать правило, что на концах снежинки (при одном соседе) вероятность налипания слабая, а вот при двух-трёх побольше. В результате дендриты получаются менее/более разреженные.
+Либо вот правило "налипать только на концах" - тогда получаются вообще не дендриты, а паутины:
+http://fuga.ru/shelley/pautina/cell10.gif
+У меня на сайте валяется старая демка под Винды, там есть и рост дендрита. Правда, она написана для IBM PC 286, для которой это был мультик на полчаса. На современном ноуте она должна пролетать со свистом :)
+http://fuga.ru/misc/selfor.com
+
+stealthy_shadow
+Да тут бы хотя бы плоские правдоподобные кристаллы получить... Идеи уже закончились - хреново у меня с ними, не идут у меня КА, не вижу я "картинку". Поэтому за предложение поиграться с вероятностью налипания в зависимости от населенности - спасибо.
+А вот "жилки" в кристаллах как раз можно сделать дендритами (еще одно "спасибо" за идею). Или просто выделить "поколения" кристаллов и тупо растить один в пределах другого - так что задача получения сложных кристаллов сводится к предыдущей.
+А всю эту красоту сгладить и расцветить можно чем-то типа Diamond Square или просто "плазмой" - надо посмотреть по результатам.
+В общем - идеи теперь есть, надо с ними поиграться... Спасибо за советы.
+
 
 
 CSS и JS - релоадер:
@@ -332,7 +363,7 @@ CSS и JS - релоадер:
   Добавлять это время ко всем JS и CSS
   Или просто копировать JS-CSS в каталог cache - но тут нужен центральный репозиторий кэшей и права на запись
 
-  Апгрейд офицеров
+Апгрейд офицеров
   Карго-мастер - убрать или повысить ёмкость трюмов. Проверить нужность по статистике использования
   Переделать с повышением цены на трюмы+склады
   Академик - добавить +1 слот/левел. Проверить нужность по статистике использования
@@ -767,7 +798,7 @@ xsolla - передавать описание платежа
 ======================
 
 
-Текущий билд #39b2.0#
+Текущий билд #39b5.3#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять fleet_update_last
