--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -27,7 +27,9 @@ where unit_type = 3001 ;
   Скидки на Прем
 
 
-Рандомизатор онлайна
+happening
+
+Рандомизатор онлайна активности
   update lh_users set onlinetime = UNIX_TIMESTAMP() - FLOOR(1 + RAND() * (30 - 1)) * 24*60*60 ;
 
 Ивент "Черная Луна"
@@ -798,7 +800,7 @@ xsolla - передавать описание платежа
 ======================
 
 
-Текущий билд #39b5.3#
+Текущий билд #39b6.2#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять fleet_update_last
